# QProjects_KS_Agentic-AI

./: .gitignore  README.md  package-lock.json
AI_Voice_Over/: config.py  main.py  requirements.txt  voice_converter.py
AI_Voice_Over_Azure/: .env.example  AZURE_PROCESS_DOCUMENTATION.md  AZURE_SETUP_GUIDE.md  README.md  azure_voice_converter.py  config.py  main.py  requirements.txt  test_azure_speech.py
AI_Voice_Over_cloudinary_eleven_assesmbly/: PROCESS_DOCUMENTATION.md  README.md
Agentic_AI/AI/11-CrewAI/3-crewaiproject/: .env  README.md  instructions.txt  pyproject.toml  report.md
Agentic_AI/AI/11-CrewAI/3-crewaiproject/src/crewaiproject/: crew.py  main.py
Agentic_AI/AI/11-CrewAI/example_crew/: .env  README.md  pyproject.toml
Agentic_AI/AI/11-CrewAI/example_crew/src/example_crew/: crew.py  main.py
Agentic_AI/AI/11-CrewAI/poemexample_flows/: .env  README.md  crewai_flow.html  poem.txt  pyproject.toml
Agentic_AI/AI/11-CrewAI/poemexample_flows/src/poemexample_flows/: main.py
Agentic_AI/AI/11-CrewAI/poemexample_flows/src/poemexample_flows/crews/poem_crew/: poem_crew.py
Agentic_AI/AI/11-CrewAI/poemexample_flows/src/poemexample_flows/crews/poem_crew/config/: agents.yaml
Company-Summary-Agent/: CompanyDBSummaryAgent.py  Dockerfile  Scrapper.py  app.py  requirements.txt
Conversion/: __init__.py
Conversion_Process/: main.py  pyproject.toml
Conversion_Process_Streamlit/: .env  Dockerfile_QM_Test  QMigrator_Pipeline_QM_Test.yaml  README.md  __init__.py  flow.mmd  main.py  pyproject.toml  requirements.txt  streamlit_app.py
Conversion_Workflow/: main.py
Conversion_Workflow - Human-in-loop/: main.py  pyproject.toml
Conversion_Workflow - Human-in-loop/config/: config_manager.py
Conversion_Workflow - Human-in-loop/llm/: __init__.py  gemini_llm.py  groq_llm.py
Conversion_Workflow - Human-in-loop/nodes/: __init__.py  conversion_nodes.py
Conversion_Workflow - Human-in-loop/state/: state.py
Conversion_Workflow - Human-in-loop/workflow/: graph_builder.py
DevPilot-main/: links.txt
MCP_Samples/: .env  main.py  pyproject.toml
MCP_Samples/1-MCP_N/: instructions.txt
MCP_Samples/1-MCP_N/mcp-use-demo/: browser_mcp.json
MCP_Samples/1-MCP_N/mcp-use-main/: README_STEPS.md
MCP_Samples/1-MCP_N/mcp-use-main/examples/: browser_use.py  filesystem_use.py
MCP_Samples/1-MCP_N/postgres/: server.py
MCP_Samples/sample/: mcp_client.py  mcp_code.txt  mcp_server.py  setup_db.py  setup_db_client.py  setup_db_server.py  users.db
SDLC/: SDLC.py  app.py  requirements.txt
SDLCAgentic-main/: links.txt
SDLC_Overview-Workflow_graph/: requirements.txt
SDLCv2/: SDLC.py  app.py  requirements.txt
(+687 files in other folders)
