[project]
name = "mcp-samples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "langchain-groq>=0.3.2",
    "mcp-use>=1.2.5",
    "mcp[cli]>=1.6.0",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
]
