[project]
name = "crewaiproject"
version = "0.1.0"
description = "crewaiproject using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
crewaiproject = "crewaiproject.main:run"
run_crew = "crewaiproject.main:run"
train = "crewaiproject.main:train"
replay = "crewaiproject.main:replay"
test = "crewaiproject.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
