[project]
name = "example_crew"
version = "0.1.0"
description = "example_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
example_crew = "example_crew.main:run"
run_crew = "example_crew.main:run"
train = "example_crew.main:train"
replay = "example_crew.main:replay"
test = "example_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
